codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__backend_banners_tests__owner_notification_after_account_change.snap
---
source: tui/src/chatwidget/tests/backend_banners_tests.rs
expression: rendered
---
• Limit increase requested.
